Remove a workaround for race in DevToolsDataSource::StartDataRequest()

I can't reproduce the race anymore and suspect that it is gone with
https://chromium-review.googlesource.com/1229198, which has stopped
relying on interception to support debug_devtools mode.

Bug: 616641
Change-Id: I31ffbc52ff5fcac1e28a677bbc03c7ea9c6bca0b
Reviewed-on: https://chromium-review.googlesource.com/c/1385116
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Andrey Kosyakov <caseq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#618069}
Former-commit-id: 625fd79e112f07c841b49d76b3c702a0acb43d09